[gd_scene load_steps=18 format=3 uid="uid://df2udom5nk6ya"]

[ext_resource type="Script" uid="uid://c4n7c8fqtbnho" path="res://Script/choosing_server_overlay.gd" id="1_il0kt"]
[ext_resource type="Texture2D" uid="uid://dpcufrbqjwgvo" path="res://asset/GUI_Parts/Gui_parts/barmid_ready.png" id="2_aek4e"]
[ext_resource type="Texture2D" uid="uid://baog4h23xvvv" path="res://asset/(DEMO) Lords Of Pain - Old School Isometric Assets/baldurs-gate-ii-throne-of-bhaal-background-wallpaper-altar-of-gaming-355.webp" id="2_may7t"]
[ext_resource type="Texture2D" uid="uid://bs7lyjulc5pdy" path="res://asset/Foozle_UI_0001_RPG_Set_1/Exit_Button_Dark.png" id="3_4bc21"]
[ext_resource type="Texture2D" uid="uid://dj4vqjrd3kv67" path="res://font/fontbolt (4)-Photoroom.png" id="3_6be3i"]
[ext_resource type="Texture2D" uid="uid://bknub58yglkgm" path="res://font/fontbolt (3)-Photoroom.png" id="4_0y2vk"]
[ext_resource type="Texture2D" uid="uid://bgy2gih4rvgty" path="res://asset/Foozle_UI_0001_RPG_Set_1/Exit_Button_Light.png" id="4_2t801"]
[ext_resource type="Texture2D" uid="uid://dx3hu1crc7oh6" path="res://asset/GUI_Parts/Gui_parts/name_bar2.png" id="4_8d6ln"]
[ext_resource type="FontFile" uid="uid://d6alfcuerseg" path="res://Diablo.ttf" id="4_eptd3"]
[ext_resource type="Texture2D" uid="uid://bw1omgklcxbsq" path="res://asset/Foozle_UI_0001_RPG_Set_1/Exit_Button_Normal.png" id="5_8d6ln"]
[ext_resource type="Texture2D" uid="uid://bui2vxrxpjykc" path="res://buttonStock1d.png" id="5_may7t"]
[ext_resource type="Texture2D" uid="uid://b6im0qbuq85y8" path="res://buttonStock1.png" id="6_eptd3"]
[ext_resource type="FontFile" uid="uid://dg0whh4ceykhf" path="res://Carlito-Regular.ttf" id="6_vhrv0"]
[ext_resource type="Texture2D" uid="uid://cei3xiw4u11tc" path="res://asset/Simple Fantasy GUI/PNG/Login Panel/LoginButton.png" id="10_6be3i"]
[ext_resource type="Texture2D" uid="uid://c5jatwbstc5e7" path="res://asset/Simple Fantasy GUI/PNG/Login Panel/LoginButton_Pressed.png" id="11_vhrv0"]
[ext_resource type="Texture2D" uid="uid://8x8j85dhgu32" path="res://asset/Simple Fantasy GUI/PNG/Login Panel/LoginButton_Hover.png" id="12_0y2vk"]
[ext_resource type="AudioStream" uid="uid://53spa2a4fwgh" path="res://Button Click - Sound Effect - Sound-Vibe (mp3cut (mp3cut.net).mp3" id="17_0y2vk"]

[node name="ChoosingServerOverlay" type="CanvasLayer"]
script = ExtResource("1_il0kt")

[node name="PanelBG" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = 1.0
offset_right = 635.0
offset_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_may7t")

[node name="TextureRect2" type="TextureRect" parent="PanelBG"]
layout_mode = 0
offset_left = 1341.43
offset_top = 387.143
offset_right = 1442.43
offset_bottom = 462.143
scale = Vector2(2, 2)
texture = ExtResource("3_6be3i")

[node name="TextureRect" type="TextureRect" parent="PanelBG"]
layout_mode = 0
offset_left = 235.714
offset_top = 408.571
offset_right = 1092.71
offset_bottom = 498.571
scale = Vector2(1.3, 1.3)
texture = ExtResource("4_0y2vk")

[node name="SelectServerButton" type="TextureButton" parent="PanelBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.494
anchor_top = 0.628
anchor_right = 0.494
anchor_bottom = 0.628
offset_left = -237.051
offset_top = -51.428
offset_right = 786.949
offset_bottom = 204.572
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("4_8d6ln")
texture_pressed = ExtResource("4_8d6ln")
texture_hover = ExtResource("4_8d6ln")

[node name="Label" type="Label" parent="PanelBG/SelectServerButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_vhrv0")
theme_override_font_sizes/font_size = 80
text = "
Choose Server
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="TextureButton" parent="PanelBG"]
layout_mode = 0
offset_left = 768.571
offset_top = 737.143
offset_right = 1068.57
offset_bottom = 937.143
texture_normal = ExtResource("5_may7t")
texture_pressed = ExtResource("6_eptd3")
texture_hover = ExtResource("6_eptd3")

[node name="Label" type="Label" parent="PanelBG/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.5
offset_top = -133.5
offset_right = 298.5
offset_bottom = 133.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_eptd3")
theme_override_font_sizes/font_size = 30
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServerPanel" type="TextureRect" parent="PanelBG"]
visible = false
layout_mode = 0
offset_left = 184.286
offset_top = 140.0
offset_right = 916.286
offset_bottom = 511.0
scale = Vector2(2, 2)
texture = ExtResource("2_aek4e")
expand_mode = 2

[node name="ServerButton" type="TextureButton" parent="PanelBG/ServerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.189
anchor_top = 0.22
anchor_right = 0.189
anchor_bottom = 0.22
offset_left = -84.348
offset_top = -30.62
offset_right = 83.652
offset_bottom = 30.38
texture_normal = ExtResource("10_6be3i")
texture_pressed = ExtResource("11_vhrv0")
texture_hover = ExtResource("12_0y2vk")

[node name="Label" type="Label" parent="PanelBG/ServerPanel/ServerButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -32.5
offset_right = 283.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_eptd3")
theme_override_font_sizes/font_size = 14
text = "522-Avalora 0/99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseServerPanel" type="TextureButton" parent="PanelBG/ServerPanel"]
layout_mode = 0
offset_left = 654.0
offset_top = 23.0
offset_right = 707.0
offset_bottom = 76.0
texture_normal = ExtResource("3_4bc21")
texture_pressed = ExtResource("4_2t801")
texture_hover = ExtResource("5_8d6ln")

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_0y2vk")
